--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,20 +2,20 @@ body,
 html {
     min-height: 100%;
     height: 100%;
-    min-width: 100%;
+    background-color: chocolate;
+}
+
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     margin: 0;
     padding: 0;
 }
 
-body {
-    height: 100%;
-    width: 100%;
-}
-
 .toaster {
-    background-color: black;    
+    height: 250px;
+    width: 250px;
+    background-color: beige;
 }
 
-p {
-    color: white;
-}
