--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ body,
 html {
     min-height: 100%;
     height: 100%;
-    background-color: chocolate;
+    background-color: lightcyan;
 }
 
 body {
@@ -13,14 +13,26 @@ body {
     padding: 0;
 }
 
-.toaster {
-    height: 250px;
+#toaster {
+    content: '';
+    height: 285px;
     width: 250px;
-    background-color: beige;
+    border: 7px solid #FDD88A;
+    border-top-width: 15px;
     border-top-left-radius: 88px;
     border-top-style: solid;
     border-top-right-radius: 88px;
     border-bottom-left-radius: 25px;
     border-bottom-right-radius: 25px;
+    background-image: radial-gradient(#ffe0b3, #ffa64d 90%);
+}
+
+#toaster::before {
+    content: '';
+    background-image: linear-gradient(#ff8c1a, #c60);
+}
+
+#toaster::after {
+    content: '';
 }
 
