--- a/stylesheet.css
+++ b/stylesheet.css
@@ -28,15 +28,17 @@ body {
     content: '';   
     display: flex;
     position: relative;
-    background-color: silver;
-    border: none;
     width: 150px;
-    height: 30px;
-    /* codar 2 caixas */
+    height: 115px;
+    border-radius: 42% 0 0 46%;
+    border: 30px solid grey;
+    border-bottom: none;
+    border-right: none;
+    /* codar 2 caixas */ 
+
 }
 
 #crowbar::before {
-    border-color: grey;
     right: 151px;
     bottom: 1.5px;
     /* usar border-radius pra definir curvatura ; */
@@ -44,11 +46,8 @@ body {
 
 #crowbar::after {
     content: '';
-    left: 548px;   
-    bottom: 85.75px;
-    box-shadow: 0px -29px;
-    border-bottom-right-radius: 50%;
-    border-top-left-radius: 50%;
-    transform: rotate(-62deg);
-}
+    left: 548px;
+    bottom: 262.75px;
+    transform: rotate(179deg);
+    }
 
