--- a/stylesheet.css
+++ b/stylesheet.css
@@ -20,6 +20,9 @@ body {
     transform: rotate(58deg);
     background-color: red;
     box-sizing: border-box;
+    box-shadow: inset 0 21px 42px -17px #F1D3CE;  
+    box-shadow: 0px 9px darkred;
+    border-bottom-color:white;  
 
 }
 
@@ -42,6 +45,7 @@ body {
     right: 151px;
     bottom: 1.5px;
     border-radius: 67% 0 0 70%;
+    box-shadow: inset 22px 9px darkgrey;
     /* usar border-radius pra definir curvatura ; */
 }
 
